--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,7 +1,13 @@
 * {
 	box-sizing: border-box;
-	color: #fff;
+	color: #000;
+	font-family: Lato, Arial, Helvetica, sans-serif;
 	font-size: 16px;
+}
+
+div,
+button {
+	color: #fff;
 }
 
 #notification {
@@ -9,7 +15,7 @@
 }
 
 .btn {
-	background-color: #0791e6;
+	background-color: #cc4e00;
 	padding: 20px;
 }
 
@@ -36,12 +42,12 @@
 }
 
 .success {
-	background-color: #0791e6;
+	background-color: #cc4e00;
 }
 
 .wrapper {
 	align-items: center;
-	background: linear-gradient(90deg, #1c3643 0, #273b47 25%, #1e5372);
+	background: #ede0c2;
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
