--- a/src/features/x-ray/x-ray.css
+++ b/src/features/x-ray/x-ray.css
@@ -133,3 +133,18 @@
 		grid-template-columns: repeat(3, 1fr);
 	}
 }
+
+.xray-loading {
+	align-items: center;
+	color: var(--xrayLight);
+	display: flex;
+	font-size: 3em;
+	height: 100%;
+	justify-content: center;
+	overflow: auto;
+	padding: 0 var(--xrayPadding);
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 99999999999999999;
+}
